# piifilter

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  dialog.rs  docs.rs  embed.rs  main.rs  ner.rs  pos.rs  qa.rs  qdrant.rs  regex.rs  summary.rs
static/: style.css
