[package]
name = "piifilter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.1"
reqwest = "0.11.17"
rocket = "0.5.0-rc.3"
rust-bert = "0.20"
serde = { verison = "1.0.162", features = ["derive"]}
serde_json = "1.0.96"
tokio = "1.24.1"
uuid = { version = "1.1.2", features = ["v4"] }
